--- a/tasks/sshd.yml
+++ b/tasks/sshd.yml
@@ -15,6 +15,7 @@
     owner: "{{ sshd_config_owner }}"
     group: "{{ sshd_config_group }}"
     mode: 0600
+    validate: /usr/sbin/sshd -t -f %s
   notify:
     - "(Handler: All Linux/Unix OSs) Restart sshd"
 
